Spacing correction.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -78,6 +78,7 @@
 
   #app {
     max-width: 1440px;
+    margin: 0 auto;
   }
 
   html {
